# telljava

./: CMakeLists.txt  README.md  ScanMemoryManager.cpp  clientManager.cpp  clientManager.h  helpers.hpp  schema.cpp  telljava.cpp  transaction.cpp
java/src/ch/ethz/tell/: ClientManager.java  Pair.java  PredicateType.java  ScanIterator.java  ScanQuery.java  Schema.java  Transaction.java  UnsafeException.java
java/src/main/ch/ethz/tell/: Aggregation.java  CNFClause.java  ClientManager.java  Field.java  Pair.java  Predicate.java  PredicateType.java  Projection.java  ScanIterator.java  ScanMemoryManager.java  ScanQuery.java  Schema.java  Table.java  Transaction.java  Unsafe.java  UnsafeException.java
java/src/test/ch/ethz/tell/: Runner.java  TestRunner.java
